# photon-docker

./: .gitignore  .pre-commit-config.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.build.yaml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.external-opensearch.yml  docker-compose.lite.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.py  entrypoint.sh  process_manager.py  pyproject.toml  renovate.json  sonar-project.properties  start-photon.sh  supervisord.conf  updater.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-push.yml  check-releases.yml  external-opensearch-test.yml  full-test-jsonl.yml  full-test.yml  index_sync.yml  lint.yml  pytest.yml  release-drafter.yml  sonarqube.yml
src/: __init__.py  check_remote.py  config.py  config.sh  cron_setup.py  downloader.py  entrypoint.py  filesystem.py  importer.py  logger.py  logging.sh  process.py  process.sh  process_manager.py  supervisor.py  updater.py
src/jsonl/: __init__.py  decompressor.py  downloader.py
src/utils/: config.py  logger.py  notify.py  regions.py  sanitise.py  sanitize.py  validate_config.py
tests/: test_check_remote.py  test_downloader.py  test_entrypoint.py  test_filesystem.py  test_importer.py  test_process_manager.py  test_updater.py
tests/jsonl/: test_downloader.py
tests/utils/: test_logger.py  test_notify.py  test_regions.py  test_validate_config.py
